package despues;

public class GuestRol implements Rol {

    public boolean estaAutorizado(Persona persona) {
        // la logica muy compleja que estaba en Persona, ahora esta ACA
        return false;
    }
}
