package despues;

public interface Rol {

    public boolean estaAutorizado(Persona persona);
}
